# CBBI

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  README.md  asciinema.txt  default.nix  entrypoint.sh  fetch_bitcoin_data.py  globals.py  main.py  pyproject.toml  requirements.txt  shell.nix  utils.py
api/: bgeometrics_api.py  cbbiinfo_api.py  cbbinfo_api.py  coinmetrics_api.py  coinsoto_api.py  glassnode_api.py  lookintobitcoin_api.py
asciinema/: thumbnail.xcf
metrics/: __init__.py  _common.py  base_metric.py  cbbiinfo_fallback_metric.py  golden_ratio.py  google_trends.py  halving_to_peak.py  mvrv_z_score.py  pi_cycle.py  puell.py  puell_multiple.py  reserve_risk.py  reverse_risk.py  rhodl_ratio.py  rupl.py  stock_to_flow.py  trolololo.py  two_year_moving_average.py  woobull_topcap_cvdd.py
resources/: bitcoin-logo.xcf
scripts/: docker-update.bat  docker-update.sh
website/: .gitignore  composer.json  index.php  robots.txt  sitemap.xml
